[package]
name = "ma_plaits_test"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s3-hal = "0.2.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.2.0", features = ["esp32s3", "panic-handler", "print-uart", "exception-handler"] }
esp-println       = { version = "0.3.0", features = ["esp32s3"] }
mi-plaits-dsp = { git = "https://github.com/sourcebox/mi-plaits-dsp-rs" }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s3"], optional = true }
libm = "0.2.6"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]

[profile.release]
debug = true
opt-level = 'z'
